# arduino-lint-action

./: .codespellrc  .licensed.yml  .prettierignore  README.md  Taskfile.yml  action.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: check-license.yml  check-npm-dependencies-task.yml  check-npm-task.yml  check-npm.yml  check-packaging-ncc-typescript-npm.yml  check-prettier-formatting-task.yml  check-toc-task.yml  check-toc.yml  check-tsconfig-task.yml  check-tsconfig.yml  integration.yml  spell-check-task.yml  spell-check.yml  sync-labels-npm.yml  test-javascript-jest-task.yml  test.yml
.github/workflows/testdata/some-projects/PermissiveLibrary/: library.properties
.licenses/npm/: semver-7.7.0.dep.yml
.licenses/npm/@actions/: core-2.0.0.dep.yml
__tests__/: main.test.ts
__tests__/testdata/: tags.json
src/: installer.ts  main.ts
